# aws.ec2.compare

./: .flake8  .gitignore  .pypirc  CHANGELOG.md  README.md  TODO.md  requirements-dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/docker-image/: Dockerfile  generate.sh
.github/workflows/: on_push.yml  on_release.yml
ec2_compare/: __init__.py  data.py  ec2data.py  mixin.py  utils.py
ec2_compare/internal/: ec2data.py  ec2keys.py
ec2_compare/internal/architectures/: __init__.py  arm64.py  i386.py  x86_64.py  x86_64_mac.py
ec2_compare/internal/auto_recovery/: false.py  true.py
ec2_compare/internal/bare_metal/: __init__.py  false.py  true.py
ec2_compare/internal/boot_modes/: legacy_bios.py  uefi.py
ec2_compare/internal/burstable_performance/: false.py  true.py
ec2_compare/internal/current_generation/: __init__.py  false.py  true.py
ec2_compare/internal/dedicated_hosts/: __init__.py  false.py  true.py
ec2_compare/internal/ebs_optimized_support/: default.py  supported.py  unsupported.py
ec2_compare/internal/efa/: false.py  true.py
ec2_compare/internal/ena_support/: required.py  supported.py  unsupported.py
ec2_compare/internal/encryption_in_transit/: false.py  true.py
ec2_compare/internal/encryption_support/: supported.py  unsupported.py
ec2_compare/internal/free_tier_eligible/: __init__.py  false.py  true.py
ec2_compare/internal/hibernation/: false.py  true.py
ec2_compare/internal/hypervisor/: nitro.py  xen.py
github/workflows/: on_push.yml
helpers/: redownload.py  update.sh
scripts/: build.sh  tag.sh  tests.sh
tests/: test_data.py  test_ec2data.py  test_mixin.py  test_utils.py
(+297 files in other folders)
