[metadata]
name = aws-ec2-compare
summary = Compare EC2 instances families without querying AWS API
description-file =
    README.md
license = Apache License, Version 2.0
license_files =
    LICENSE
author = weldpua2008
author-email = weldpua2008@users.noreply.github.com
home-page = https://github.com/weldpua2008/aws.ec2.compare
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Python Modules




[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    wheel

[bdist_wheel]
python-tag=py3


[options.package_data]
mypy_ec2_compare =
    version.txt

#[options.entry_points]
#console_scripts =
#    ec2_compare = ec2_compare.main:main

[flake8]
max-line-length = 127
exclude = .git,__pycache__,docs,build,dist,test_*.py
ignore = E203,W503
max-complexity = 12

[mypy]
python_version = 3.8
warn_return_any = False
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
ignore_errors = False

[mypy-tests.*]
ignore_errors = True
